Chromad: Show error message for on ARM and x86 boards

Active Directory integration is not supported yet on ARM and x86

Bug: 781228, 676602
Test: does not show error on lulu (x86_64). shows error on elm (arm)
Change-Id: I6a4baf9fbea3f257418963bd0a94781308c55191
Reviewed-on: https://chromium-review.googlesource.com/758684
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516788}
Former-commit-id: 062b13a96cb510a3f7a24e9f117262088c4fdd74